--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,9 @@ dependencies:
     sdk: flutter
   json_annotation: ^3.0.0
   http: ^0.12.0+4
+  sqflite: ^1.3.0
+  cached_network_image: ^2.0.0
+  path_provider: ^1.5.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
