search after duration

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,8 +41,8 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-  assets:
-    - img/
+  #assets:
+   # - img/
 
 
   # The following line ensures that the Material Icons font is
